--- a/index.html
+++ b/index.html
@@ -1,12 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quonota Clone</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <!-- <script
+      src="https://kit.fontawesome.com/d3427147b8.js"
+      crossorigin="anonymous"
+    ></script> -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.3.min.js"
+      integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
+      crossorigin="anonymous"
+    ></script>
+    <title>Quonota Clone</title>
+  </head>
+
+  <body>
+    <div id="wrap">
+      <!-- Top Navigation -->
+      <header class="header-top">
+        <div class="header-top__logo">
+          <a href="#">
+            <img src="assets/logo-light.svg" />
+          </a>
+        </div>
+        <div class="header-top__divider"></div>
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a href="#">Investment Expertise</a></li>
+            <li class="nav__item"><a href="#">Industries</a></li>
+            <li class="nav__item"><a href="#">Who we are</a></li>
+            <li class="nav__item"><a href="#">Media</a></li>
+            <li class="nav__item"><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="header-top__toggle">
+          <button id="toggle__menu" class="toggle__menu open">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+        </div>
+      </header>
+
+    <!-- Sticky Scroll Navigation  -->
+      <header class="header-sticky">
+      <div class="header-sticky__logo">
+        <a href="#">
+          <img src="./assets/logo-dark.svg" />
+        </a>
+        <a href="#">
+          <img src="./assets/pri-logo.png" />
+        </a>
+      </div>
+      <div class="header-sticky__divider"></div>
+       <div class="header-top__toggle">
+          <button id="toggle__menu" class="toggle__menu open">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+        </div>
+      <nav class="sticky-navbar">
+        <ul class="sticky-navbar__list">
+          <li class="sticky-navbar__list-item"><a href="#">Investment Expertise</a></li>
+          <li class="sticky-navbar__list-item"><a href="#">Industries</a></li>
+          <li class="sticky-navbar__list-item"><a href="#">Who we are</a></li>
+          <li class="sticky-navbar__list-item"><a href="#">Media</a></li>
+          <li class="sticky-navbar__list-item"><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <nav class="mobile-nav">
+      <ul class="mobile-nav__items">
+        <li><a href="#">Investment Expertise</a></li>
+        <li><a href="#">Industries</a></li>
+        <li><a href="#">Who we are</a></li>
+        <li><a href="#">Media</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+      <!-- Left side bar -->
+      <header class="left-bar">
+        <div class="left-bar__logo">
+          <img
+            src="./assets/logo-light.svg"
+            alt="left logo"
+            class="left-bar__img"
+          />
+        </div>
+        <div class="left-bar__scroll">
+          <a href="#" class="left-bar__scroll-down">
+            <!-- <i class="fas fa-arrow-up"></i> -->
+            <span class="material-symbols-outlined">
+              south
+              </span>
+            SCROLL DOWN
+          </a>
+        </div>
+      </header>
+      <!-- Hero Section -->
+      <div id="main">
+        <!-- Hero main section -->
+        <section class="hero-section">
+          <div class="hero-section__content">
+            <div class="hero-section__text">
+              <h1>
+                Through <span>Smart</span> Funding,<br />Transformational
+                Results.
+              </h1>
+              <p>We help innovators build breakout companies.</p>
+              <div class="hero-section__btn">
+                <a href="#">Find Out More</a>
+              </div>
+              <div class="hero-section__logo">
+                <a href="#">
+                  <img src="./assets/pri-logo-2.png"/>
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- <section class="">Our Industries</section>
+    <section class="">Who We Are</section>
+    <section class="">Our Strategic Orientation</section>
+    <section class="">Our Expertise</section>
+    <section class="">testimonial</section>
+    <footer>footer</footer> -->
+      </div>
+    </div>
+
+    <script type="text/javascript" src="script.js"></script>
+  </body>
 </html>
