--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/test.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,13 +15,12 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
-     <script
-      src="https://kit.fontawesome.com/d3427147b8.js"
-      crossorigin="anonymous"
-    ></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script
       src="https://code.jquery.com/jquery-3.6.3.min.js"
       integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
@@ -31,17 +30,17 @@
   </head>
 
   <body>
-    <div id="wrap">
+    <main>
       <!-- Top Navigation -->
       <header class="header-top">
-        <div class="header-top__logo">
+        <!-- <div class="header-top__logo">
           <a href="#">
             <img src="assets/logo-light.svg" />
           </a>
-        </div>
+        </div> -->
         <div class="header-top__divider"></div>
-        <nav class="nav">
-          <ul class="nav__list">
+        <nav class="navbar">
+          <ul class="nav">
             <li class="nav__item"><a href="#">Investment Expertise</a></li>
             <li class="nav__item"><a href="#">Industries</a></li>
             <li class="nav__item"><a href="#">Who we are</a></li>
@@ -49,17 +48,17 @@
             <li class="nav__item"><a href="#">Contact</a></li>
           </ul>
         </nav>
-        <div class="header-top__toggle">
+        <!-- <div class="header-top__toggle">
           <button id="toggle__menu" class="toggle__menu open">
             <span></span>
             <span></span>
             <span></span>
           </button>
-        </div>
+        </div> -->
       </header>
 
       <!-- Sticky Scroll Navigation  -->
-      <header class="header-sticky">
+      <!-- <header class="header-sticky">
         <div class="header-sticky__logo">
           <a href="#">
             <img src="./assets/logo-dark.svg" />
@@ -87,9 +86,9 @@
             <li class="sticky-navbar__list-item"><a href="#">Contact</a></li>
           </ul>
         </nav>
-      </header>
+      </header> -->
 
-      <nav class="mobile-nav">
+      <!-- <nav class="mobile-nav">
         <ul class="mobile-nav__items">
           <li><a href="#">Investment Expertise</a></li>
           <li><a href="#">Industries</a></li>
@@ -97,10 +96,10 @@
           <li><a href="#">Media</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-      </nav>
+      </nav> -->
 
       <!-- Left side bar -->
-      <header class="left-bar">
+      <!-- <header class="left-bar">
         <div class="left-bar__logo">
           <img
             src="./assets/logo-light.svg"
@@ -110,14 +109,13 @@
         </div>
         <div class="left-bar__scroll">
           <a href="#" class="left-bar__scroll-down">
-            <!-- <i class="fas fa-arrow-up"></i> -->
             <span class="material-symbols-outlined"> south </span>
             SCROLL DOWN
           </a>
         </div>
-      </header>
+      </header> -->
     
-      <div id="main">
+      <div class="container-fluid p-0">
         <!-- Home section -->
         <section class="home-section">
           <div class="home-section__content">
@@ -140,81 +138,22 @@
         </section>
 
         <!-- Slide section -->
-        <section class="section slide-section ">
-          <div class="section-container slide-container">
-            <div class="slide-content">
+        <!-- <section class="section slide-section ">
+          <div class="container slide-container">
+            <div class="slide-content row">
               <div class="slide-content__header">
                 <h2>Our Industries</h2>
-                <div class="slider-arrow">
-                  <span class="material-symbols-outlined prev">
-                    arrow_back_ios
-                    </span>
-                    <span class="material-symbols-outlined next">
-                      arrow_forward_ios
-                      </span>
-                </div>
-              </div>
-              <div>
-                <div class="slider">
-                  <div class="slider-item" style="background-image:url('/assets/s1.png');">
-                    <!-- <div class="bg-container">
-                      <div class="bg-img"></div>
-                      <h3>Technology & Disruption</h3>
-                    </div> -->
-                  </div>
-                  <div class="slider-item" style="background-image:url('/assets/s2.png');">
-                    <!-- <div class="bg-container">
-                      <div class="bg-img"></div>
-                      <h3>Forestry & Industrials</h3>
-                    </div> -->
-                  </div>
-                  <div class="slider-item" style="background-image:url('/assets/s3.png');">
-                    <!-- <div class="bg-container">
-                      <div class="bg-img"></div>
-                      <h3>Web3.0 & Blockchain</h3>
-                    </div> -->
-                  </div>
-                  <div class="slider-item" style="background-image:url('/assets/s4.png');">
-                    <!-- <div class="bg-container">
-                      <div class="bg-img"></div>
-                      <h3>Agriculture</h3>
-                    </div> -->
-                  </div>
-                  <div class="slider-item" style="background-image:url('/assets/s5.png');">
-                    <!-- <div class="bg-container">
-                      <div class="bg-img"></div>
-                      <h3>Space & SpaceTech</h3>
-                    </div> -->
-                  </div>
-                  <div class="slider-item" style="background-image:url('/assets/s6.png');">
-                    <!-- <div class="bg-container">
-                      <div class="bg-img"></div>
-                      <h3>BioTech & Wellness</span>
-                    </div> -->
-                  </div>
-                  <div class="slider-item" style="background-image:url('/assets/s7.png');">
-                    <!-- <div class="bg-container">
-                      <div class="bg-img"></div>
-                      <h3>Asset Management & Funds</span>
-                    </div> -->
-                  </div>
-                  <div class="slider-item" style="background-image:url('/assets/s8.png');">
-                    <!-- <div class="bg-container">
-                      <div class="bg-img"></div>
-                      <h3>Franchise Operations</span>
-                    </div> -->
-                  </div>
-                </div>
+                <div class="slide-arrow"></div>
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
 
         <!-- statistic section -->
-        <section class="stat-section">
-          <div class="section-container stat-container">
+        <!-- <section class="stat-section">
+          <div class="container stat-container">
             <div class="stat-content row">
-              <div class="col-md-6 col-sm-6 col-lg-3 col-xl-3 stat-card">
+              <div class="col-md-3 col-sm-6 stat-card">
                 <div class="stat-card__content">
                   <div class="stat-card__icon">
                     <span class="material-symbols-outlined">
@@ -227,7 +166,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 col-sm-6 col-lg-3 col-xl-3 stat-card">
+              <div class="col-md-3 col-sm-6 stat-card">
                 <div class="stat-card__content">
                   <div class="stat-card__icon">
                     <span class="material-symbols-outlined">
@@ -240,12 +179,12 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 col-sm-6 col-lg-3 col-xl-3 stat-card">
+              <div class="col-md-3 col-sm-6 stat-card">
                 <div class="stat-card__content">
                   <div class="stat-card__icon">
-                      <span class="material-symbols-outlined">
-                        webhook
-                        </span>
+                    <span class="material-symbols-outlined">
+                      device_hub
+                      </span>
                   </div>
                   <div class="stat-card__desc">
                     <div class="stat-card__value">>$1B</div>
@@ -253,7 +192,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 col-sm-6 col-lg-3 col-xl-3 stat-card">
+              <div class="col-md-3 col-sm-6 stat-card">
                 <div class="stat-card__content">
                   <div class="stat-card__icon">
                     <span class="material-symbols-outlined">
@@ -268,11 +207,11 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
 
         <!-- who we are section -->
-        <section class="section left-section">
-          <div class="section-container left-container">
+        <!-- <section class="section left-section">
+          <div class="container left-container">
             <div class="left-content">
               <div class="left-content__desc">
                 <h2>Who We Are</h2>
@@ -287,12 +226,12 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
 
         <!-- Our Strategic Orientation section  -->
-        <section class="section right-section">
-          <div class="section-container right-container">
-            <div class="right-content reversed">
+        <!-- <section class="section right-section">
+          <div class="container right-container">
+            <div class="right-content">
               <div class="right-content__img">
                 <img src="./assets/section-4.png" />
               </div>
@@ -309,11 +248,11 @@
 
           </div>
 
-        </section>
+        </section> -->
 
           <!-- Our Expertise section -->
-          <section class="section left-section">
-            <div class="section-container left-container">
+          <!-- <section class="section left-section">
+            <div class="container left-container">
               <div class="left-content">
                 <div class="left-content__desc">
                   <h2>Our Expertise</h2>
@@ -329,21 +268,20 @@
                 </div>
               </div>
             </div>
-          </section>
+          </section> -->
 
            <!-- Quote section -->
-          <section class="quote-section">
-            <div class="section-container quote-container">
+          <!-- <section class="section quote-section">
+            <div class="container quote-container">
             <div class="quote-img">
               <img src="./assets/quote.png" />
             </div>
-            <div class="quote-content ">
+            <div class="quote-content">
               <blockquote>
-                <p>Our mission is to be a catalyst for growth, both strategically and operationally. We’re incredibly supportive of our portfolio businesses and add material value that goes far beyond investment capital.</p>
+                <p></p>
+                <p style="font-size: 1.5rem;">Our mission is to be a catalyst for growth, both strategically and operationally. We’re incredibly supportive of our portfolio businesses and add material value that goes far beyond investment capital.</p>
+                <p></p>
                 <footer>
-                  <span class="material-symbols-outlined quote-icon">
-                    format_quote
-                  </span>
                 <strong>Sergey Radchenko</strong>
                 <span>Partner / Principal</span>
                 </footer>
@@ -351,66 +289,16 @@
             </div>
             </div>
 
-          </section>
+          </section> -->
 
-          <footer>
-            <div class="section footer-section">
-              <div class="section-container footer-container">
-                <div class="footer-content">
-                  <div class="footer-logo">
-                    <a>
-                      <img src="./assets/logo-dark-full.svg" />
-                    </a>
-                    <a>
-                      <img src="./assets/pri-logo.png" class="pri"/>
-                    </a>
-                  </div>
-                  <nav class=" footer-nav">
-                    <ul class="nav-list">
-                      <li>Terms & Conditions</li>
-                      <li>Privacy Policy</li>
-                      <li >Cookies Policy</li>
-                    </ul>
-                  </nav>
-                  <div class="footer-contact">
-                    <div class="footer-contact__item">
-                      <div class="item-icon">
-                        <span class="material-symbols-outlined phone-icon">
-                          call
-                        </span>
-                        <span class="item-call">+357 25 731880</span>
-                      </div>
-                    </div>
-                    <div class="footer-contact__item">
-                      <div class="item-icon">
-                        <span class="material-symbols-outlined email-icon">
-                          mark_as_unread
-                        </span>
-                        <span class="item-email">info@quonota.com</span>
-                      </div>
-                    </div>
-                    <div class="footer-contact__item">
-                      <div class="item-icon">
-                        <i class="fab fa-linkedin-in"></i>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="back-scroll">
-                <a href="#main">Scroll Up <span class="material-symbols-outlined"> north </span></a>
-              </div>
-            </div>
-          </footer>
 
 
 
 
       </div>
-    </div>
+    </main>
 
     <script type="text/javascript" src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </body>
 </html>
