--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     />
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
      <script
       src="https://kit.fontawesome.com/d3427147b8.js"
       crossorigin="anonymous"
@@ -211,10 +210,10 @@
         </section>
 
         <!-- statistic section -->
-        <section class="stat-section">
+        <section class="stat stat-section">
           <div class="section-container stat-container">
-            <div class="stat-content row">
-              <div class="col-md-6 col-sm-6 col-lg-3 col-xl-3 stat-card">
+            <div class="stat-content">
+              <div class=" stat-card">
                 <div class="stat-card__content">
                   <div class="stat-card__icon">
                     <span class="material-symbols-outlined">
@@ -222,12 +221,12 @@
                       </span>
                   </div>
                   <div class="stat-card__desc">
-                    <div class="stat-card__value">>$100M</div>
+                    <div class="stat-card__value">>$<span class="count_num"></span>M</div>
                     <div class="stat-card__text">Managed assets</div>
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 col-sm-6 col-lg-3 col-xl-3 stat-card">
+              <div class=" stat-card">
                 <div class="stat-card__content">
                   <div class="stat-card__icon">
                     <span class="material-symbols-outlined">
@@ -240,7 +239,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 col-sm-6 col-lg-3 col-xl-3 stat-card">
+              <div class=" stat-card">
                 <div class="stat-card__content">
                   <div class="stat-card__icon">
                       <span class="material-symbols-outlined">
@@ -253,7 +252,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 col-sm-6 col-lg-3 col-xl-3 stat-card">
+              <div class=" stat-card">
                 <div class="stat-card__content">
                   <div class="stat-card__icon">
                     <span class="material-symbols-outlined">
@@ -306,9 +305,7 @@
                   </div>
               </div>
             </div>
-
           </div>
-
         </section>
 
           <!-- Our Expertise section -->
@@ -332,7 +329,7 @@
           </section>
 
            <!-- Quote section -->
-          <section class="quote-section">
+          <section class="quote">
             <div class="section-container quote-container">
             <div class="quote-img">
               <img src="./assets/quote.png" />
@@ -350,7 +347,6 @@
                 </blockquote>
             </div>
             </div>
-
           </section>
 
           <footer>
@@ -365,8 +361,8 @@
                       <img src="./assets/pri-logo.png" class="pri"/>
                     </a>
                   </div>
-                  <nav class=" footer-nav">
-                    <ul class="nav-list">
+                  <nav class="footer-nav">
+                    <ul class="footer-nav__list">
                       <li>Terms & Conditions</li>
                       <li>Privacy Policy</li>
                       <li >Cookies Policy</li>
@@ -402,15 +398,10 @@
               </div>
             </div>
           </footer>
-
-
-
-
       </div>
     </div>
 
     <script type="text/javascript" src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </body>
 </html>
