edited scroll up button

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
     </header>
 
-    <main>
+    <main id="main">
       <!-- Home Section -->
       <section class="home">
         <div class="home__content">
